fixed overflows on mainOuter

--- a/Employer Project/src/App.css
+++ b/Employer Project/src/App.css
@@ -20,8 +20,8 @@ Thanks for using RealtimeColors.com!
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 80vh;
   overflow: hidden;
 }
 .largeText {
